[gd_scene load_steps=2 format=3 uid="uid://1s27bkcyvfk5"]

[ext_resource type="Script" path="res://Managers/GameManager/GameManager.gd" id="1_g0v5p"]

[node name="GameManager" type="Node"]
process_mode = 3
script = ExtResource("1_g0v5p")

[node name="NextLevelTimer" type="Timer" parent="."]
one_shot = true

[connection signal="gamePaused" from="." to="." method="_on_game_paused"]
